fixed <p> margins
original margins were squeezing too much when viewing on a horizontal monitor

--- a/src/App.css
+++ b/src/App.css
@@ -281,7 +281,7 @@ button:active {
   p {
     font-size: 1.75rem;
     text-align: justify;
-    margin: 0rem 19rem 0rem 19rem
+    margin: 0rem 12% 0rem 12%
   }
 
   ul {
